--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,15 @@
 name = "schack"
 version = "0.1.0"
 edition = "2021"
+default-run = "schack"
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 rand = "0.8.4"
+slint = "1.4"
+
+[build-dependencies]
+slint-build = "1.4"
+
